# bt-server

./: .env.example  Cargo.toml  Dockerfile  build.rs  compose.yaml  nginx.conf
.github/workflows/: code_quality.yml  test.yml
migrations/: 20240707171410_create_user.sql  20240707171410_create_user_table.sql  20240707171410_create_users_table.sql  20240709115804_add_default_uuid_to_user.sql  20240709120335_add_hashed_password_column_to_user.sql  20240709121342_add_salt_col_to_users_table.sql  20240710131144_remove_salt_column_users_table.sql  20240710134029_create_session_table.sql  20240720124655_drop_session_table.sql  20240720124755_add_users_weight_log_table.sql  20240720124755_create_users_weight_log_table.sql  20240721164137_create_user_body_measurements_cm_table.sql  20240721164137_create_users_body_measurements_cm_table.sql  20240722162023_create_users_info_table.sql  20240723144114_create_users_profiles_table.sql  20240723160651_create_users_settings_table.sql  20240730143617_create_users_body_fat_table.sql  20240731085220_create_users_progress_media.sql  20240731090405_create_users_pr_table.sql  20240731091548_create_pr_media_table.sql
proto/: test.proto  user.proto
scripts/: init_db.sh  run_checks.sh
src/: auth.rs  configuration.rs  file_storage.rs  guards.rs  lib.rs  main.rs  middleware.rs  models.rs  repositories.rs  services.rs  types.rs
src/models/: body_fat.rs  body_measurements.rs  mod.rs  session.rs  user.rs  user_info.rs  user_pr.rs  user_profile.rs  user_progress_media.rs  user_settings.rs  user_weight.rs  weight_log.rs
src/repositories/: body_measurements_repository.rs  mod.rs  session_repository.rs  user.rs  user_body_fat.rs  user_body_fat_repository.rs  user_body_measurements.rs  user_body_measurements_repository.rs  user_info.rs  user_info_repository.rs  user_profile.rs  user_profile_repository.rs  user_repository.rs  user_settings.rs  user_settings_repository.rs  user_weight.rs  user_weight_log_repository.rs  (+1 more)
(+43 files in other folders)
