[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.12.6"
tonic = "0.11.0"
tokio = { version = "1.38", features = ["full"] }
tonic-reflection = "0.11.0"
tonic-health = "0.11.0"
serde = { version = "1.0.204", features = ["derive"] }
sqlx = { version = "0.7.4", features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }

uuid = { version = "1.9.1", features = ["serde", "v4"] }
secrecy = { version = "0.8.0", features = ["serde"] }
envy = "0.4.2"
serde-aux = "4.5.0"
dotenvy = "0.15.7"
url = { version = "2.5.2", features = ["serde"] }
validator = "0.18.1"
bcrypt = "0.15.1"
rand = "0.8.5"

[build-dependencies]
tonic-build = "0.11.0"
