[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39.2", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
secrecy = { version = "0.8.0", features = ["serde"] }
envy = "0.4.2"
dotenvy = "0.15.7"
url = { version = "2.5.2", features = ["serde"] }
validator = "0.18.1"
bcrypt = "0.15.1"
rand = "0.8.5"
sha2 = "0.10.8"
chrono = { version = "0.4.38", features = ["serde"] }
thiserror = "1.0.62"
regex = "1.10.5"
actix-web = "4.8.0"
log = "0.4.22"
env_logger = "0.11.5"
jsonwebtoken = "9.3.0"
futures-util = "0.3.30"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-multipart = "0.7.2"
aws-config = { version = "1.1.8", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1.1.8", features = [
  "hardcoded-credentials",
] }
aws-sdk-s3 = { version = "1.23.0", features = ["behavior-version-latest"] }

[profile.release]
lto = true
